:fix: Bubble animation wasn't working properly on Safari

--- a/dev/sass/responsive.scss
+++ b/dev/sass/responsive.scss
@@ -205,6 +205,7 @@
         display: block;
         position: absolute;
         border-radius: 50%;
+        will-change: transform;
         &--primary {
             background-color: var(--colorPrimary);
         }
